--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css"> 
     <link rel="stylesheet" href="css/tarea2.css"> 
-    <title>Proyecto Portafolio</title>
+    <title>Manejo Informatico</title>
 </head>
 <body>
 
@@ -172,11 +172,11 @@
 
       <!--Acerca de-->
       <div class="acerca-de row align-items-center px-4 mb-5">
-        <div class="foto col-4 text-center">
+        <div class="foto col-12 col-lg-4 text-center">
           <img class="rounded-circle mb-3 w-100" src="img/slide-1.jpg" alt="">
           <p class="nombre">Trello Design</p>
         </div>
-        <div class="info col-8">
+        <div class="info col-12 col-lg-8">
           <h2 class="titulo">Acerca de</h2>
           <p class="resumen">Trello es una herramienta visual que permite a los equipos gestionar cualquier tipo de proyecto y flujo de trabajo, así como supervisar tareas. Añade archivos, checklists o incluso automatizaciones: personalízalo todo según las necesidades de tu equipo. Solo tienes que registrarte, crear un tablero y ¡listo!</p>
           <h2 class="titulo">Centro neurálgico de productividad</h2>
